Set product to use Vault injector

--- a/application/product-api.yaml
+++ b/application/product-api.yaml
@@ -44,25 +44,26 @@ spec:
         consul.hashicorp.com/connect-inject: "true"
         # consul.hashicorp.com/connect-service-upstreams: "database:5432"
         vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "products"
+        vault.hashicorp.com/role: "product"
         vault.hashicorp.com/namespace: "admin"
-        vault.hashicorp.com/agent-inject-secret-config: "database/creds/products"
-        vault.hashicorp.com/agent-inject-template-config: |
+        vault.hashicorp.com/agent-inject-secret-conf.json: "database/creds/product"
+        vault.hashicorp.com/agent-inject-template-conf.json: |
           {
             "bind_address": ":9090",
-            {{ with secret "database/creds/products" -}}
-            "db_connection": "host=terraform-2021031913231396060000000d.cl3xt9calu0m.us-east-1.rds.amazonaws.com port=5432 user={{ .Data.username }} password={{ .Data.password }} dbname=products sslmode=disable"
+            "metrics_address": ":9103",
+            {{ with secret "database/creds/product" -}}
+            "db_connection": "host=terraform-2021032210382205310000000d.cl3xt9calu0m.us-east-1.rds.amazonaws.com port=5432 user={{ .Data.username }} password={{ .Data.password }} dbname=products sslmode=disable"
             {{- end }}
           }
     spec:
       serviceAccountName: product
-      volumes:
-      - name: config
-        configMap:
-          name: db-configmap
-          items:
-          - key: config
-            path: conf.json
+      # volumes:
+      # - name: config
+      #   configMap:
+      #     name: db-configmap
+      #     items:
+      #     - key: config
+      #       path: conf.json
       containers:
         - name: product
           image: hashicorpdemoapp/product-api:v0.0.12
@@ -71,7 +72,7 @@ spec:
             - containerPort: 9103
           env:
             - name: "CONFIG_FILE"
-              value: "/config/conf.json"
+              value: "/vault/secrets/conf.json"
           livenessProbe:
             httpGet:
               path: /health
@@ -80,7 +81,7 @@ spec:
             timeoutSeconds: 1
             periodSeconds: 10
             failureThreshold: 30
-          volumeMounts:
-            - name: config
-              mountPath: /config
-              readOnly: true
+          # volumeMounts:
+          #   - name: config
+          #     mountPath: /config
+          #     readOnly: true
