--- a/consul-kubernetes/product-api.yaml
+++ b/consul-kubernetes/product-api.yaml
@@ -32,7 +32,7 @@ metadata:
 data:
   config: |
     {
-      "db_connection": "host=127.0.0.1 port=5432 user=postgres password=password dbname=products sslmode=disable",
+      "db_connection": "host=127.0.0.1 port=5432 user=postgres password=AiOmHGPdaU dbname=products sslmode=disable",
       "bind_address": ":9090",
       "metrics_address": ":9103"
     }
