--- a/application/frontend.yaml
+++ b/application/frontend.yaml
@@ -6,10 +6,11 @@ metadata:
   labels:
     app: frontend
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 80
       targetPort: 80
+      nodePort: 30080
   selector:
     app: frontend
 ---
