Update intention to use L7

--- a/application/intentions.yaml
+++ b/application/intentions.yaml
@@ -19,7 +19,11 @@ spec:
     name: product
   sources:
     - name: public
-      action: allow
+      permissions:
+        - action: allow
+          http:
+            pathPrefix: /coffees
+            methods: ['GET']
 ---
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceIntentions
