--- a/application/frontend.yaml
+++ b/application/frontend.yaml
@@ -5,12 +5,13 @@ metadata:
   name: frontend
   labels:
     app: frontend
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30080
   selector:
     app: frontend
 ---
