--- a/application/product-api.yaml
+++ b/application/product-api.yaml
@@ -44,6 +44,7 @@ spec:
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "database:5432"
         consul.hashicorp.com/enable-metrics-merging: "false"
+        consul.hashicorp.com/transparent-proxy: "false"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "product"
         vault.hashicorp.com/namespace: "admin"
@@ -60,7 +61,7 @@ spec:
       serviceAccountName: product
       containers:
         - name: product
-          image: hashicorpdemoapp/product-api:v0.0.16
+          image: hashicorpdemoapp/product-api:v0.0.17
           ports:
             - containerPort: 9090
             - containerPort: 9103
