--- a/application/public-api.yaml
+++ b/application/public-api.yaml
@@ -45,6 +45,7 @@ spec:
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "product:9090"
         consul.hashicorp.com/enable-metrics-merging: "false"
+        consul.hashicorp.com/transparent-proxy: "false"
     spec:
       serviceAccountName: public
       containers:
