Update automation to sign offline root CA with Vault

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ id_rsa
 kubernetes/terraform.auto.tfvars
 vault/terraform.auto.tfvars
 database-service/terraform.auto.tfvars
+
+certs/root
+certs/intermediate
