Revert "Update the server root path for Consul"
This reverts commit 1eeae7e48f85e59a2934f1e215e3f59942abbeeb.

--- a/consul/setup/templates/values.yaml
+++ b/consul/setup/templates/values.yaml
@@ -13,7 +13,8 @@ global:
         "vault.hashicorp.com/namespace": "${VAULT_NAMESPACE}"
       connectCA:
         address: ${VAULT_ADDR}
-        rootPKIPath: ${CONSUL_SERVER_ROOT_CA_PATH}
+        rootPKIPath: connect_root/
+        intermediatePKIPath: dc1/connect_inter/
         authMethodPath: ${KUBERNETES_AUTH_METHOD_PATH}
   tls:
     enabled: true
