--- a/consul/setup/templates/values.yaml
+++ b/consul/setup/templates/values.yaml
@@ -21,6 +21,9 @@ global:
     enableAutoEncrypt: true
     caCert:
       secretName: "${CONSUL_PKI_PATH}/cert/ca"
+    caKey:
+      secretName: "${CONSUL_PKI_PATH}/issue/${CONSUL_SERVER_ROLE}"
+      secretKey: private_key
   acls:
     manageSystemACLs: true
     bootstrapToken:
