Add HCP Consul with toggle

--- a/consul/setup/templates/values.yaml
+++ b/consul/setup/templates/values.yaml
@@ -44,7 +44,8 @@ controller:
   enabled: true
 terminatingGateways:
   enabled: true
-  replicas: 1
+  defaults:
+    replicas: 1
 
 ui:
   enabled: true
