Add working application manifests

--- a/application/frontend.yaml
+++ b/application/frontend.yaml
@@ -5,17 +5,11 @@ metadata:
   name: frontend
   labels:
     app: frontend
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
 spec:
-  type: LoadBalancer
-  loadBalancerSourceRanges:
-  - "10.0.4.0/24"
-  - "10.0.5.0/24"
-  - "10.0.6.0/24"
+  type: ClusterIP
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 3000
+      targetPort: 3000
   selector:
     app: frontend
 ---
@@ -31,42 +25,6 @@ metadata:
   name: frontend
 spec:
   protocol: "http"
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: nginx-configmap
-data:
-  config: |
-    # /etc/nginx/conf.d/default.conf
-    server {
-        listen       80;
-        server_name  localhost;
-
-        #charset koi8-r;
-        #access_log  /var/log/nginx/host.access.log  main;
-
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-        }
-
-        # Proxy pass the api location to save CORS
-        # Use location exposed by Consul connect
-        location /api {
-            proxy_pass http://127.0.0.1:8080;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
-        }
-
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-    }
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -84,26 +42,17 @@ spec:
         service: frontend
         app: frontend
       annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9102"
         consul.hashicorp.com/connect-inject: "true"
-        consul.hashicorp.com/connect-service-upstreams: "public:8080"
-        consul.hashicorp.com/enable-metrics-merging: "false"
-        consul.hashicorp.com/transparent-proxy: "false"
-        consul.hashicorp.com/transparent-proxy-exclude-inbound-ports: "80"
     spec:
       serviceAccountName: frontend
-      volumes:
-      - name: config
-        configMap:
-          name: nginx-configmap
-          items:
-          - key: config
-            path: default.conf
       containers:
         - name: frontend
-          image: hashicorpdemoapp/frontend:v0.0.5
+          image: hashicorpdemoapp/frontend:v1.0.2
+          imagePullPolicy: Always
           ports:
-            - containerPort: 80
-          volumeMounts:
-            - name: config
-              mountPath: /etc/nginx/conf.d
-              readOnly: true
+            - containerPort: 3000
+          env:
+            - name: NEXT_PUBLIC_PUBLIC_API_URL
+              value: "/"
