Change API Gateway to HTTP
Filed https://github.com/hashicorp/consul-api-gateway/issues/208. The API Gateway
relies on SPIFFE validation and Vault PKI Secrets Engine doesn't include a SPIFFE
URL.

--- a/application/route.yaml
+++ b/application/route.yaml
@@ -6,7 +6,12 @@ spec:
   parentRefs:
   - name: api-gateway
   rules:
-  - backendRefs:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    backendRefs:
     - kind: Service
       name: nginx
+      namespace: default
       port: 80
