--- a/consul/cts/kubernetes.yaml
+++ b/consul/cts/kubernetes.yaml
@@ -19,6 +19,30 @@ metadata:
   name: consul-terraform-sync
 automountServiceAccountToken: true
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: secrets-writer
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: ["coordination.k8s.io"]
+  resources: ["leases"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: consul-terraform-sync
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: secrets-writer
+subjects:
+- kind: ServiceAccount
+  name: consul-terraform-sync
+---
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceDefaults
 metadata:
@@ -45,10 +69,21 @@ data:
     }
 
     consul {
-      address = "https://a445f6fa7837a40e7813fa9aa0e53057-650476096.us-west-2.elb.amazonaws.com"
+      address = "https://consul-server:8501"
+
       tls {
         enabled = true
         verify  = false
+      }
+
+      service_registration {
+        enabled = true
+        address = "127.0.0.1"
+        service_name = "Consul-Terraform-Sync"
+        default_check {
+          enabled = true
+          address = "http://consul-terraform-sync:8558"
+        }
       }
     }
 
@@ -56,13 +91,19 @@ data:
       log         = false
       persist_log = false
 
-      backend "local" {}
+      backend "kubernetes" {
+        secret_suffix     = "state"
+        in_cluster_config = true
+      }
     }
+
+    terraform_provider "vault" {}
 
     task {
       name        = "products-database"
       description = "Task to create database secrets engine for product PostgreSQL database"
-      module      = "github.com/joatmon08/terraform-vault-postgres-nia"
+      module      = "/consul-terraform-sync/module"
+      providers   = ["vault"]
 
       variable_files = ["/vault/secrets/terraform.tfvars"]
 
@@ -88,11 +129,10 @@ spec:
         service: consul-terraform-sync
         app: consul-terraform-sync
       annotations:
-        consul.hashicorp.com/connect-inject: "true"
-        consul.hashicorp.com/transparent-proxy: "false"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "consul-terraform-sync"
         vault.hashicorp.com/namespace: "admin"
+        vault.hashicorp.com/agent-inject-token: "true"
         vault.hashicorp.com/agent-inject-secret-terraform.tfvars: "static/admin/products/data/postgres"
         vault.hashicorp.com/agent-inject-template-terraform.tfvars: |
           name                             = "product"
@@ -107,11 +147,46 @@ spec:
           allowed_roles                    = ["product"]
     spec:
       serviceAccountName: consul-terraform-sync
+      initContainers:
+      - name: git-clone
+        image: alpine/git
+        args:
+            - clone
+            - --single-branch
+            - --
+            - https://github.com/joatmon08/terraform-vault-postgres-nia.git
+            - /consul-terraform-sync/module
+        volumeMounts:
+        - mountPath: /consul-terraform-sync/module
+          name: module
       containers:
         - name: consul-terraform-sync
           image: hashicorp/consul-terraform-sync:0.6.0
           ports:
             - containerPort: 8558
+          command: ["/bin/sh"]
+          args: ["-c", "export VAULT_TOKEN=$(cat /vault/secrets/token) && /bin/docker-entrypoint.sh /bin/consul-terraform-sync"]
           env:
-            - name: NEXT_PUBLIC_PUBLIC_API_URL
-              value: "/"
+            - name: VAULT_ADDR
+              valueFrom:
+                secretKeyRef:
+                  name: consul-terraform-sync
+                  key: vault_addr
+            - name: CONSUL_HTTP_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: consul-terraform-sync
+                  key: consul_token
+          volumeMounts:
+            - name: config
+              mountPath: "/consul-terraform-sync/config"
+              readOnly: true
+            - name: module
+              mountPath: "/consul-terraform-sync/module"
+              readOnly: true
+      volumes:
+        - name: config
+          configMap:
+            name: consul-terraform-sync
+        - name: module
+          emptyDir: {}
