--- a/consul/cts/kubernetes.yaml
+++ b/consul/cts/kubernetes.yaml
@@ -88,7 +88,7 @@ data:
     }
 
     driver "terraform" {
-      log         = false
+      log         = true
       persist_log = false
 
       backend "kubernetes" {
