--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ certs/connect
 certs/server
 certs/gateway
 certs/new_config.json
+certs/vault_token.json
 
 consul/cts/sync-tasks
 consul/cts/terraform
+
+secrets/
