--- a/application/expense-report/route.yaml
+++ b/application/expense-report/route.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
-  name: hashicups
+  name: expense
 spec:
   parentRefs:
   - name: api-gateway
@@ -9,9 +9,9 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /
+        value: /report
     backendRefs:
     - kind: Service
-      name: nginx
+      name: report
       namespace: default
-      port: 80
+      port: 9092
