--- a/application/hashicups/nginx.yaml
+++ b/application/hashicups/nginx.yaml
@@ -82,6 +82,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
+  labels:
+    app: nginx
+    tags.datadoghq.com/service: nginx
 spec:
   replicas: 1
   selector:
@@ -94,10 +97,17 @@ spec:
         service: nginx
         app: nginx
       annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "9102"
+        admission.datadoghq.com/enabled: "true"
+        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
+        ad.datadoghq.com/envoy-sidecar.checks: |
+          {
+            "envoy": {
+              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
+            }
+          }
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "frontend:3000, public:8080"
+        consul.hashicorp.com/transparent-proxy-exclude-outbound-ports: "8125,8126"
     spec:
       serviceAccountName: nginx
       containers:
@@ -105,6 +115,19 @@ spec:
           image: nginx:stable-alpine
           ports:
             - containerPort: 80
+          env:
+            - name: DD_SERVICE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.labels['tags.datadoghq.com/service']
+            - name: DD_AGENT_HOST
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP
+            - name: HOST_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP
           volumeMounts:
             - name: nginx-config
               mountPath: /etc/nginx
