--- a/application/hashicups/product-api.yaml
+++ b/application/hashicups/product-api.yaml
@@ -31,6 +31,7 @@ metadata:
   name: product
   labels:
     app: product
+    tags.datadoghq.com/service: product
 spec:
   replicas: 1
   selector:
@@ -40,7 +41,16 @@ spec:
     metadata:
       labels:
         app: product
+        tags.datadoghq.com/service: product
       annotations:
+        admission.datadoghq.com/enabled: "true"
+        ad.datadoghq.com/envoy-sidecar.tags: '{"service": "envoy-proxy"}'
+        ad.datadoghq.com/envoy-sidecar.checks: |
+          {
+            "envoy": {
+              "instances": [{"openmetrics_endpoint": "http://%%host%%:20200/metrics"}]
+            }
+          }
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "database:5432"
         consul.hashicorp.com/transparent-proxy: "false"
@@ -65,6 +75,18 @@ spec:
             - containerPort: 9090
             - containerPort: 9103
           env:
+            - name: DD_SERVICE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.labels['tags.datadoghq.com/service']
+            - name: DD_AGENT_HOST
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP
+            - name: HOST_IP
+              valueFrom:
+                  fieldRef:
+                      fieldPath: status.hostIP
             - name: "CONFIG_FILE"
               value: "/vault/secrets/conf.json"
           livenessProbe:
