--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
+boto3==1.27.1
+botocore==1.30.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
 exceptiongroup==1.1.2
+idna==3.4
 iniconfig==2.0.0
+jmespath==1.0.1
 lark==1.1.5
 packaging==23.1
 pluggy==1.2.0
 pytest==7.4.0
+python-dateutil==2.8.2
 python-hcl2==4.3.2
+requests==2.31.0
+s3transfer==0.6.1
+six==1.16.0
 tomli==2.0.1
+urllib3==1.26.16
