--- a/certs/openssl.cnf
+++ b/certs/openssl.cnf
@@ -181,21 +181,21 @@ string_mask = nombstr
 
 [ req_distinguished_name ]
 countryName         = Country Name (2 letter code)
-countryName_default     = NL
+countryName_default     = US
 countryName_min         = 2
 countryName_max         = 2
 
 stateOrProvinceName     = State or Province Name (full name)
-stateOrProvinceName_default = North Holland
+stateOrProvinceName_default = California
 
 localityName            = Locality Name (eg, city)
-localityName_default        = Amsterdam
+localityName_default        = San Francisco
 
 0.organizationName      = Organization Name (eg, company)
 0.organizationName_default  = HashiCorp
 
 organizationalUnitName      = Organizational Unit Name (eg, section)
-organizationalUnitName_default  = HashiConf Europe
+organizationalUnitName_default  = HashiConf
 
 commonName          = Common Name (eg, YOUR name)
 commonName_default  = Consul CA Root
