Add intentions to allow observability

--- a/consul/defaults/proxy-defaults.yaml
+++ b/consul/defaults/proxy-defaults.yaml
@@ -1,46 +1,46 @@
-apiVersion: consul.hashicorp.com/v1alpha1
-kind: ProxyDefaults
-metadata:
-  name: global
-spec:
-  config:
-    envoy_dogstatsd_url: "udp://${HOST_IP}:8125"
-    envoy_extra_static_clusters_json: |
-      {
-        "name": "datadog_agent",
-        "type": "STRICT_DNS",
-        "connect_timeout": "1.000s",
-        "dns_lookup_family": "V4_ONLY",
-        "lb_policy": "ROUND_ROBIN",
-        "load_assignment": {
-        "cluster_name": "datadog_agent",
-        "endpoints": [
-            {
-            "lb_endpoints": [
-                {
-                "endpoint": {
-                    "address": {
-                    "socket_address": {
-                        "address": "datadog",
-                        "port_value": 8126,
-                        "protocol": "TCP"
-                    }
-                    }
-                }
-                }
-            ]
-            }
-        ]
-        }
-      }
-    envoy_tracing_json: |
-      {
-          "http": {
-              "name": "envoy.tracers.datadog",
-              "typed_config": {
-                  "@type": "type.googleapis.com/envoy.config.trace.v3.DatadogConfig",
-                  "collector_cluster": "datadog_agent",
-                  "service_name": "envoy-proxy"
-              }
-          }
-      }
+# apiVersion: consul.hashicorp.com/v1alpha1
+# kind: ProxyDefaults
+# metadata:
+#   name: global
+# spec:
+#   config:
+#     envoy_dogstatsd_url: "udp://${HOST_IP}:8125"
+#     envoy_extra_static_clusters_json: |
+#       {
+#         "name": "datadog_agent",
+#         "type": "STRICT_DNS",
+#         "connect_timeout": "1.000s",
+#         "dns_lookup_family": "V4_ONLY",
+#         "lb_policy": "ROUND_ROBIN",
+#         "load_assignment": {
+#         "cluster_name": "datadog_agent",
+#         "endpoints": [
+#             {
+#             "lb_endpoints": [
+#                 {
+#                 "endpoint": {
+#                     "address": {
+#                     "socket_address": {
+#                         "address": "datadog",
+#                         "port_value": 8126,
+#                         "protocol": "TCP"
+#                     }
+#                     }
+#                 }
+#                 }
+#             ]
+#             }
+#         ]
+#         }
+#       }
+#     envoy_tracing_json: |
+#       {
+#           "http": {
+#               "name": "envoy.tracers.datadog",
+#               "typed_config": {
+#                   "@type": "type.googleapis.com/envoy.config.trace.v3.DatadogConfig",
+#                   "collector_cluster": "datadog_agent",
+#                   "service_name": "envoy-proxy"
+#               }
+#           }
+#       }
