--- a/application/promotions/ingress.yaml
+++ b/application/promotions/ingress.yaml
@@ -1,17 +1,17 @@
----
-apiVersion: gateway.networking.k8s.io/v1beta1
+apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
-  name: route-promotions
+  name: promotions
 spec:
   parentRefs:
   - name: api-gateway
-    namespace: consul
   rules:
   - matches:
     - path:
         type: PathPrefix
-        value: /promotions
+        value: /
     backendRefs:
-    - name: dashboard
+    - kind: Service
+      name: dashboard
+      namespace: promotions
       port: 9090
