--- a/application/promotions/dashboard.yaml
+++ b/application/promotions/dashboard.yaml
@@ -1,6 +1,10 @@
-# Copyright (c) HashiCorp, Inc.
-# SPDX-License-Identifier: MPL-2.0
-
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceDefaults
+metadata:
+  name: dashboard
+spec:
+  protocol: http
 ---
 apiVersion: v1
 kind: Service
